// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`{'noPackageJsonTypings': 'error'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "error",
  "alwaysPackageJsonTypes": "error",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "error",
}
`;

exports[`{'noPackageJsonTypings': 'off'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "error",
  "alwaysPackageJsonTypes": "error",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "off",
}
`;

exports[`{'noPackageJsonTypings': 'warn'}} 1`] = `
{
  "alwaysPackageJsonFiles": "error",
  "alwaysPackageJsonMain": "error",
  "alwaysPackageJsonTypes": "error",
  "noImplicitBrowsersList": "warn",
  "noImplicitSideEffects": "warn",
  "noPackageJsonTypings": "warn",
}
`;

exports[`{'noPackageJsonTypings': false}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": false,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;

exports[`{'noPackageJsonTypings': true}} 1`] = `
[ZodError: [
  {
    "code": "invalid_union",
    "unionErrors": [
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "error",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "warn",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      },
      {
        "issues": [
          {
            "received": true,
            "code": "invalid_literal",
            "expected": "off",
            "path": [
              "strictOptions",
              "noPackageJsonTypings"
            ],
            "message": "Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\""
          }
        ],
        "name": "ZodError"
      }
    ],
    "path": [
      "strictOptions",
      "noPackageJsonTypings"
    ],
    "message": "Validation error: Validation error: Invalid literal value, expected \\"error\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"warn\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\", or Validation error: Invalid literal value, expected \\"off\\" at \\"strictOptions.noPackageJsonTypings\\" at \\"strictOptions.noPackageJsonTypings\\""
  }
]]
`;
